[package]
name = "rust-intercom-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"

reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["serde_derive", "derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["rt", "macros"] }


[dev-dependencies]
dotenv = "0.15.0"
uuid = { version = "1.7.0", features = ["v4"] }
